selection and global authentication

--- a/data/generateExampleDB.ipynb
+++ b/data/generateExampleDB.ipynb
@@ -11,28 +11,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "OperationalError",
-     "evalue": "table stocks already exists",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mOperationalError\u001b[0m                          Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-2-a0739440fa02>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mcur\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcon\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcursor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m cur.execute('''CREATE TABLE stocks\n\u001b[0;32m----> 4\u001b[0;31m                (date text, trans text, symbol text, qty real, price real)''')\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mcur\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"INSERT INTO stocks VALUES ('2006-01-05','BUY','RHAT',100,35.14)\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mOperationalError\u001b[0m: table stocks already exists"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "con = sqlite3.connect('data.db')\n",
     "cur = con.cursor()\n",
-    "cur.execute('''CREATE TABLE stocks\n",
+    "\"\"\"\n",
+    "cur.execute('''CREATE IF NOT EXISTS TABLE stocks\n",
     "               (date text, trans text, symbol text, qty real, price real)''')\n",
-    "\n",
-    "cur.execute(\"INSERT INTO stocks VALUES ('2006-01-05','BUY','RHAT',100,35.14)\")\n",
+    "\"\"\"\n",
+    "cur.execute(\"INSERT INTO stocks VALUES ('2006-01-05', 'BUY','RHAT',100,35.14)\")\n",
     "cur.execute(\"INSERT INTO stocks VALUES ('2006-03-28', 'BUY', 'IBM', 1000, 45.0)\")\n",
     "cur.execute(\"INSERT INTO stocks VALUES ('2006-04-06', 'SELL', 'IBM', 500, 53.0)\")\n",
     "cur.execute(\"INSERT INTO stocks VALUES ('2006-04-05', 'BUY', 'MSFT', 1000, 72.0)\")\n",
@@ -42,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +50,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "values = ['2006-04-05', 'C', 'SX5E', 9500, 72.0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "con = sqlite3.connect('data.db')\n",
+    "#cur = con.cursor()\n",
+    "con.execute(\"INSERT INTO options VALUES (?, ?, ?, ? , ?)\", values)\n",
+    "con.commit()\n",
+    "con.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
@@ -71,8 +82,16 @@
      "output_type": "stream",
      "text": [
       "('2006-01-05', 'BUY', 'RHAT', 100.0, 35.14)\n",
+      "('2006-01-05', 'BUY', 'RHAT', 100.0, 35.14)\n",
+      "('2006-01-05', 'BUY', 'RHAT', 100.0, 35.14)\n",
+      "('2006-03-28', 'BUY', 'IBM', 1000.0, 45.0)\n",
+      "('2006-03-28', 'BUY', 'IBM', 1000.0, 45.0)\n",
       "('2006-03-28', 'BUY', 'IBM', 1000.0, 45.0)\n",
       "('2006-04-06', 'SELL', 'IBM', 500.0, 53.0)\n",
+      "('2006-04-06', 'SELL', 'IBM', 500.0, 53.0)\n",
+      "('2006-04-06', 'SELL', 'IBM', 500.0, 53.0)\n",
+      "('2006-04-05', 'BUY', 'MSFT', 1000.0, 72.0)\n",
+      "('2006-04-05', 'BUY', 'MSFT', 1000.0, 72.0)\n",
       "('2006-04-05', 'BUY', 'MSFT', 1000.0, 72.0)\n"
      ]
     }
@@ -88,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +117,11 @@
       "('2006-01-05', 'P', 'SPX', 3300.0, 35.14)\n",
       "('2006-03-28', 'P', 'SX5E', 4400.0, 45.0)\n",
       "('2006-04-06', 'C', 'SPX', 3500.0, 53.0)\n",
-      "('2006-04-05', 'C', 'SX5E', 4500.0, 72.0)\n"
+      "('2006-04-05', 'C', 'SX5E', 4500.0, 72.0)\n",
+      "('2006-04-05', 'C', 'SX5E', 1500.0, 72.0)\n",
+      "('2006-04-05', 'C', 'SX5E', 8500.0, 72.0)\n",
+      "('2006-04-05', 'C', 'SX5E', 8500.0, 72.0)\n",
+      "('2006-04-05', 'C', 'SX5E', 9500.0, 72.0)\n"
      ]
     }
    ],
@@ -148,6 +171,36 @@
     "print(cur.fetchall())\n",
     "\n",
     "con.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l = ('2006-01-05', 'BUY', 'RHAT', 100.0, 35.14)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'INSERT INTO stocks VALUES (?, ?, ?, ?, ?)'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "name = 'stocks'\n",
+    "f'''INSERT INTO {name} VALUES ({\", \".join(['?' for i in l])})'''"
    ]
   },
   {
